<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_gambar"
        android:src="@drawable/nitro2"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <TextView
        android:id="@+id/nama"
        android:layout_below="@+id/iv_gambar"
        android:text="@string/nama"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:layout_below="@id/nama"
        android:justificationMode="inter_word"
        android:id="@+id/deskripsi"
        android:text="@string/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/harga"
        android:layout_below="@+id/deskripsi"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_buka_shopee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/harga"
        android:layout_centerHorizontal="true"
        android:text="@string/beli" />

</RelativeLayout>